# deepfake

./: .gitignore  CMakeLists.txt  compile_commands.json
.clangd/index/: ATen.h.C8D79C776203C580.idx  ATen.h.EFEDDC697BA4F7C8.idx  ATenGeneral.h.5ABC3652ADAB0C75.idx  ATenGeneral.h.D33DCBEABF0727EC.idx  ATenOpList.h.90D784B90B374EA6.idx  ATenOpList.h.9A175989CC2C33A5.idx  AlignOf.h.2D242CF0115965C5.idx  AlignOf.h.870B42AF39C0C189.idx  Allocator.h.62D37A11BDB48E23.idx  Allocator.h.E9E55C0C3AD745AD.idx  Array.h.D6CFE2D7ABD6FEF9.idx  Array.h.D8B3AECCA549B37F.idx  ArrayRef.h.9C8A02E8249AB22D.idx  ArrayRef.h.DAA6D8DE684B0CCB.idx  BFloat16-inl.h.D7730981E8FA77C4.idx  BFloat16-inl.h.F93894E44D49B3FB.idx  BFloat16.h.43B9AB9EFA610C42.idx  BFloat16.h.E5EEF58320369915.idx  Backend.h.602535EEDA12EB45.idx  Backend.h.DA05C87577F99EFC.idx  Backtrace.h.1050D5642DC3C191.idx  Backtrace.h.AAA4EEE6FD5D6447.idx  Bitset.h.40F4717A14504A7D.idx  Bitset.h.8F710F121FE9E16C.idx  C++17.h.66F91490C35058E5.idx  C++17.h.C00A0F10164F004C.idx  CPUGeneratorImpl.h.EEB707BE5A9E317D.idx  CPUGeneratorImpl.h.FDE88485B7CE178B.idx  CUDAHooksInterface.h.2094521359FBC824.idx  CUDAHooksInterface.h.D7D097C2B8A0CAB4.idx  CompileTimeFunctionPointer.h.4978D0AC33296B12.idx  CompileTimeFunctionPointer.h.5E9CA34C0B2D6125.idx  Config.h.5771B900DE54EBE5.idx  Config.h.B2F2A0C9DA70DEE3.idx  ConstexprCrc.h.75D55E8CDE7F295C.idx  ConstexprCrc.h.EA82D5DBE5C59A60.idx  Context.h.451CD0235D9931C2.idx  Context.h.9174D38E5A1C16B6.idx  CopyBytes.h.5A7E363F61D46055.idx  CopyBytes.h.F718C79B5CA0B711.idx  (+693 more)
include/deepfake/: extract_images.h  model.h
src/cassava/: Dockerfile
src/cassava/datasets/: base_dataset.cpp
src/deepfake/: .gitignore  .vimspector.json  main.cpp  main.h
src/deepfake/datasets/: extract_images.cpp
